--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -12,9 +12,11 @@
       <section name="FaPA.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+    
   <applicationSettings>
     <FaPA.Properties.Settings>
       <setting name="LocalPath" serializeAs="String">
@@ -27,13 +29,14 @@
         <value>\FEPA\DATA</value>
       </setting>
       <setting name="SqlServerInstanceName" serializeAs="String">
-        <value>\PAWARE</value>
+        <value />
       </setting>
       <setting name="ServerName" serializeAs="String">
-        <value>PC-t</value>
+        <value>CED</value>
       </setting>
     </FaPA.Properties.Settings>
   </applicationSettings>
+  
   <!--<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
