--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -29,10 +29,10 @@
         <value>\FEPA\DATA</value>
       </setting>
       <setting name="SqlServerInstanceName" serializeAs="String">
-        <value>\PAWARE</value>
+        <value />
       </setting>
       <setting name="ServerName" serializeAs="String">
-        <value>PC-t</value>
+        <value>CED</value>
       </setting>
     </FaPA.Properties.Settings>
   </applicationSettings>
@@ -84,6 +84,7 @@
        </assemblyBinding>
   
   </runtime>
+  
   <userSettings>
     <FaPA.Properties.Settings>
       <setting name="LastBackUpPath" serializeAs="String">
