--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -29,10 +29,10 @@
         <value>\FEPA\DATA</value>
       </setting>
       <setting name="SqlServerInstanceName" serializeAs="String">
-        <value>\PAWARE</value>
+        <value />
       </setting>
       <setting name="ServerName" serializeAs="String">
-        <value>PC-t</value>
+        <value>CED</value>
       </setting>
     </FaPA.Properties.Settings>
   </applicationSettings>
@@ -95,6 +95,9 @@
       </setting>
       <setting name="LastImportPath" serializeAs="String">
         <value />
+      </setting>
+      <setting name="DefaultBrowser" serializeAs="String">
+        <value>firefox.exe</value>
       </setting>
     </FaPA.Properties.Settings>
   </userSettings>
