--- a/FaPA/Properties/Settings.settings
+++ b/FaPA/Properties/Settings.settings
@@ -12,10 +12,10 @@
       <Value Profile="(Default)">\FEPA\DATA</Value>
     </Setting>
     <Setting Name="SqlServerInstanceName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\PAWARE</Value>
+      <Value Profile="(Default)" />
     </Setting>
     <Setting Name="ServerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">PC-t</Value>
+      <Value Profile="(Default)">CED</Value>
     </Setting>
     <Setting Name="LastBackUpPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
@@ -25,6 +25,9 @@
     </Setting>
     <Setting Name="LastImportPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="DefaultBrowser" Type="System.String" Scope="User">
+      <Value Profile="(Default)">firefox.exe</Value>
     </Setting>
   </Settings>
 </SettingsFile>
