--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -97,7 +97,7 @@
         <value />
       </setting>
       <setting name="DefaultBrowser" serializeAs="String">
-        <value>firefox.exe</value>
+        <value>FireFox.exe</value>
       </setting>
     </FaPA.Properties.Settings>
   </userSettings>
