--- a/FaPA/Properties/Settings.settings
+++ b/FaPA/Properties/Settings.settings
@@ -27,7 +27,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="DefaultBrowser" Type="System.String" Scope="User">
-      <Value Profile="(Default)">firefox.exe</Value>
+      <Value Profile="(Default)">FireFox.exe</Value>
     </Setting>
   </Settings>
 </SettingsFile>
