--- a/FaPA/Properties/Settings.settings
+++ b/FaPA/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">PAWARE</Value>
     </Setting>
     <Setting Name="ServerName" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">T</Value>
+      <Value Profile="(Default)">PC-TONIO</Value>
     </Setting>
     <Setting Name="LastBackUpPath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
