--- a/FaPA/App.config
+++ b/FaPA/App.config
@@ -32,7 +32,7 @@
         <value>PAWARE</value>
       </setting>
       <setting name="ServerName" serializeAs="String">
-        <value>DESKTOP-SPP0Q82</value>
+        <value>hp2</value>
       </setting>
     </FaPA.Properties.Settings>
   </applicationSettings>
