--- a/FaPA/FaPA.csproj
+++ b/FaPA/FaPA.csproj
@@ -591,12 +591,12 @@
     <Compile Include="GUI\Feautures\User\Model.cs" />
     <Compile Include="GUI\Feautures\User\Presenter.cs" />
     <Compile Include="GUI\Feautures\User\View.xaml.cs" />
-    <Compile Include="Infrastructure\Helpers\FatturaHelpers.cs" />
+    <Compile Include="DomainServices\Helpers\FatturaHelpers.cs" />
     <Compile Include="Infrastructure\Utils\NumberOnlyBehaviour.cs" />
     <Compile Include="Infrastructure\Utils\DataGridHelpers.cs" />
     <Compile Include="Infrastructure\Utils\ReflectionHelpers.cs" />
     <Compile Include="Infrastructure\Utils\TextBoxBehavior.cs" />
-    <Compile Include="Infrastructure\Helpers\NhProxyInspector.cs" />
+    <Compile Include="DomainServices\Helpers\NhProxyInspector.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
     <Compile Include="GUI\Controls\MyRecordNavigator\MyRecordNavigator.xaml.cs" />
     <Compile Include="GUI\Controls\MyTabControl\ModelBase.cs" />
@@ -728,11 +728,11 @@
     <Compile Include="Infrastructure\Finder\SearchProperty.cs" />
     <Compile Include="Infrastructure\Finder\StringPropCriterionValidationRule.cs" />
     <Compile Include="Infrastructure\Finder\StringSearchProperty.cs" />
-    <Compile Include="Infrastructure\Helpers\BaseObservable.cs" />
-    <Compile Include="Infrastructure\BootStrapper.cs" />
-    <Compile Include="Infrastructure\Helpers\BasicSharedEngineProvider.cs" />
+    <Compile Include="Infrastructure\Utils\BaseObservable.cs" />
+    <Compile Include="DomainServices\BootStrapper.cs" />
+    <Compile Include="DomainServices\Helpers\BasicSharedEngineProvider.cs" />
     <Compile Include="GUI\Controls\MyTabControl\PresenterBase.cs" />
-    <Compile Include="Infrastructure\Helpers\FinderConfirmSearchEventArgs.cs" />
+    <Compile Include="Infrastructure\Utils\FinderConfirmSearchEventArgs.cs" />
     <Compile Include="Infrastructure\FlyFetch\BaseQueryPaginatorObject.cs" />
     <Compile Include="Infrastructure\FlyFetch\CollectionFactory.cs" />
     <Compile Include="Infrastructure\FlyFetch\CountEventArgs.cs" />
@@ -748,18 +748,18 @@
     <Compile Include="Infrastructure\FlyFetch\IPageProvider.cs" />
     <Compile Include="Infrastructure\FlyFetch\PageInterceptor.cs" />
     <Compile Include="Infrastructure\FlyFetch\ProxyFactory.cs" />
-    <Compile Include="Infrastructure\Helpers\HibHelpers.cs" />
-    <Compile Include="Infrastructure\Helpers\NHibernateConfigurationExtensions.cs" />
-    <Compile Include="Infrastructure\Helpers\Observable.cs" />
-    <Compile Include="Infrastructure\Helpers\NhProxyHelpers.cs" />
-    <Compile Include="Infrastructure\Helpers\DependencyObjExtensions.cs" />
-    <Compile Include="Infrastructure\Helpers\EventPublisher.cs" />
-    <Compile Include="Infrastructure\Helpers\Fact.cs" />
+    <Compile Include="DomainServices\Helpers\HibHelpers.cs" />
+    <Compile Include="DomainServices\Helpers\NHibernateConfigurationExtensions.cs" />
+    <Compile Include="Infrastructure\Utils\Observable.cs" />
+    <Compile Include="DomainServices\Helpers\NhProxyHelpers.cs" />
+    <Compile Include="Infrastructure\Utils\DependencyObjExtensions.cs" />
+    <Compile Include="Infrastructure\Utils\EventPublisher.cs" />
+    <Compile Include="Infrastructure\Utils\Fact.cs" />
     <Compile Include="Infrastructure\IPresenter.cs" />
-    <Compile Include="Infrastructure\Helpers\NHibernateHelper.cs" />
-    <Compile Include="Infrastructure\Helpers\GenericsObservable.cs" />
+    <Compile Include="DomainServices\Helpers\NHibernateHelper.cs" />
+    <Compile Include="Infrastructure\Utils\GenericsObservable.cs" />
     <Compile Include="Infrastructure\Presenters.cs" />
-    <Compile Include="Infrastructure\Helpers\SmartVisualTreeHelper.cs" />
+    <Compile Include="Infrastructure\Utils\SmartVisualTreeHelper.cs" />
     <Page Include="GUI\Feautures\BackUpRestore\View.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
